# arthurappling-ISE-DYNAMICE

./: .gitignore  CLAUDE.md  MANIFEST.md  MASTER_INDEX.md  OMEGA1_DIRECTORY_MAP.txt  README_PRIME_PATHWY.md  UsersarthuOneDriveDesktopISE_HEALTH_MONITOR.lnk  betting_quant.md  bid_architect.md  client_website_standard.md  government_bid_SOP.md  nepq_drafter.js  package.json  recursive_integrity_audit.md  settings.json  test_system.py
.claude/: settings.local.json
ARCHIVE/: PrimePathwy_V1.html
INTELLIGENCE/: OMEGA1_GAP_ANALYSIS.md  consulting_elite_10.md  fleet_capital_ZEV.md  master_bio.md  master_pathwy.md
ISE_Betting_Console/: register_startup.ps1  server.cjs
ISE_Health_Console/: index.html  (+9 more)
sovereign-os-mvp/: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
sovereign-os-mvp/scripts/: run_dev.sh
sovereign-os-mvp/src/: main.py
sovereign-os-mvp/src/api/routes/: audit.py  evidence.py  export.py  system.py
sovereign-os-mvp/src/config/: settings.py
sovereign-os-mvp/src/core/: exceptions.py  logging.py
sovereign-os-mvp/src/db/: session.py
sovereign-os-mvp/src/middleware/: size_limit.py
sovereign-os-mvp/src/models/: audit.py  evidence.py  ocr_extraction.py  work_order.py
sovereign-os-mvp/src/schemas/: audit.py  evidence.py  export.py  work_order.py
sovereign-os-mvp/src/services/: evidence_service.py  ocr_service.py  pdf_service.py
sovereign-os-mvp/src/utils/: hash_utils.py
sovereign-os-mvp/src/workers/: ocr_queue.py
sovereign-os-mvp/workflows/: repo_architecture.md  security_hardening.md
(+808 files in other folders)
