[tool.poetry]
name = "prime-pathwy-os"
version = "0.1.0"
description = "Prime Pathwy Sovereign OS Local MVP"
authors = ["Arthur F. Appling Sr."]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
python-multipart = "^0.0.6"
python-magic = "^0.4.27"
pytesseract = "^0.3.10"
Pillow = "^10.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
